# iceye-takehome

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  parameters.yml
src/flood_alert/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/flood_alert/datasets/: __init__.py  datasets.py
src/flood_alert/pipelines/: nodes.py  pipeline.py
src/iceye_takehome/: __main__.py  settings.py
