[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "flood_alert"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
 "ipython>=8.10",
 "jupyterlab>=3.0",
 "notebook",
 "kedro~=0.19.12",
 "xarray>=2024.7.0",
 "geopandas>=1.0.1",
 "matplotlib>=3.9.4",
 "kedro-datasets>=4.1.0",
]

[project.scripts]
iceye-takehome = "flood_alert.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.1.8",]

[tool.kedro]
package_name = "flood_alert"
project_name = "iceye-takehome"
kedro_init_version = "0.19.12"
tools = "['Linting', 'Testing', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/flood_alert -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "flood_alert.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "4b786ef3eba14ebdbd3bdf5ba1a4bd5a"
